--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.1",
     "styled": "^1.0.0",
     "styled-components": "^6.1.14",
@@ -35,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "@craco/craco": "^7.1.0"
   }
 }
